some css changes

--- a/tpl/main.html
+++ b/tpl/main.html
@@ -76,8 +76,7 @@
 			</ul>
 		</div>
 		<div class="center_column" id="footer">
-			
-			
+			<div class="copyright">(c) 2010 yo' mama</div>
 		</div>
 	</body>
 </html>
