--- a/tpl/main.html
+++ b/tpl/main.html
@@ -8,71 +8,33 @@
 	</head>
 	<body>
 		<div class="center_column" id="header">
-			<img src="img/wol-logo" alt="Wall of LoL" id="logo" />
-			
+			<img src="img/wol-logo" alt="Wall of LoL" id="logo" />	
 		</div>
+		
 		<div class="center_column" id="content">
 			<ul id="feed" class="feed">
+				{% for tweet in tweets %}
 				<li class="tweet">
 					<p class="tweet_avatar">
 						<a href="">
-							<span style="display: block; background-image: url('http://a1.twimg.com/profile_images/715882048/twitterProfilePhoto_normal.jpg'); height: 48px; width: 48px;"></span>
+							<span style="display: block; background-image: url('{{ tweet.profile_image_url }}'); height: 48px; width: 48px;"></span>
 						</a>
 					</p>
 					<p class="tweet_text">
-						<a class="at_link" href="/martinrue">@martinrue</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+						{% if tweet.to_user %}
+							<a class="at_link" href="http://www.twitter.com/{{ tweet.to_user }}">@{{ tweet.to_user }}</a> 
+						{% endif %}
+						{{ tweet.tweet_txt }}
 					</p>
 					<p class="tweet_info">
-						&mdash; <a class="from_user" href="/ThursFlwerSpots">ThursFlwerSpots</a> 
-						<a class="tweet_id" href="/status/13691957569">#13691957569</a> 
-						<span class="created_at">13 seconds ago</span>
-					</p>
-				</li>			
-				<li class="tweet">
-					<p class="tweet_avatar">
-						<a href="">
-							<span style="display: block; background-image: url('http://a3.twimg.com/profile_images/431150135/retry_me_normal.jpg'); height: 48px; width: 48px;"></span>
-						</a>
-					</p>
-					<p class="tweet_text">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-					</p>
-					<p class="tweet_info">
-						&mdash; <a class="from_user" href="/ThursFlwerSpots">ThursFlwerSpots</a> 
-						<a class="tweet_id" href="/status/13691957569">#13691957569</a> 
+						&mdash; <a class="from_user" href="http://www.twitter.com/{{ tweet.from_user }}">{{ tweet.from_user }}</a> 
+						<a class="tweet_id" href="/status/13691957569">#{{ tweet.tweetID }}</a> 
 						<span class="created_at">13 seconds ago</span>
 					</p>
 				</li>
-				<li class="tweet">
-					<p class="tweet_avatar">
-						<a href="">
-							<span style="display: block; background-image: url('http://a3.twimg.com/profile_images/458298247/paula_bross_normal.jpg'); height: 48px; width: 48px;"></span>
-						</a>
-					</p>
-					<p class="tweet_text">
-						<a class="at_link" href="/martinrue">@martinrue</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-					</p>
-					<p class="tweet_info">
-						&mdash; <a class="from_user" href="/ThursFlwerSpots">ThursFlwerSpots</a> 
-						<a class="tweet_id" href="/status/13691957569">#13691957569</a> 
-						<span class="created_at">13 seconds ago</span>
-					</p>
-				</li>			
-				<li class="tweet">
-					<p class="tweet_avatar">
-						<a href="">
-							<span style="display: block; background-image: url('http://a1.twimg.com/profile_images/870084110/DJKAOSNYC1_normal.jpg'); height: 48px; width: 48px;"></span>
-						</a>
-					</p>
-					<p class="tweet_text">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-					</p>
-					<p class="tweet_info">
-						&mdash; <a class="from_user" href="/ThursFlwerSpots">ThursFlwerSpots</a> 
-						<a class="tweet_id" href="/status/13691957569">#13691957569</a> 
-						<span class="created_at">13 seconds ago</span>
-					</p>
-				</li>
+				{% endfor %}
+			
+
 			</ul>
 		</div>
 		<div class="center_column" id="footer">
